prometheus/secret.yml
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
spec:
  basicAuth:
    secret: prometheus-basic-auth
